[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/isometric/character/CharacterInteractors.gd" type="Script" id=1]
[ext_resource path="res://scenes/isometric/character/CharacterMovement.gd" type="Script" id=2]
[ext_resource path="res://scenes/isometric/character/Character.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[sub_resource type="CircleShape2D" id=3]
radius = 35.0

[node name="CharacterIso" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Movement" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="TileDetector" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileDetector"]
shape = SubResource( 2 )

[node name="Interactors" type="Node2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Ray1" type="RayCast2D" parent="Interactors"]
enabled = true
cast_to = Vector2( 75, 0 )
collision_mask = 1024
collide_with_areas = true

[node name="Ray2" type="RayCast2D" parent="Interactors"]
enabled = true
cast_to = Vector2( 70, 25 )
collision_mask = 1024
collide_with_areas = true

[node name="Ray3" type="RayCast2D" parent="Interactors"]
enabled = true
cast_to = Vector2( 70, -25 )
collision_mask = 1024
collide_with_areas = true

[node name="Ray4" type="RayCast2D" parent="Interactors"]
enabled = true
cast_to = Vector2( 45, 40 )
collision_mask = 1024
collide_with_areas = true

[node name="Ray5" type="RayCast2D" parent="Interactors"]
enabled = true
cast_to = Vector2( 45, -40 )
collision_mask = 1024
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="Interactors"]
visible = false
collision_layer = 1024
collision_mask = 1024
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactors/Area2D"]
shape = SubResource( 3 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
